<resources>
    <string name="app_name">Desafio04</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="remember">Remember</string>
    <string name="login">LOGIN</string>
    <string name="new_account">Create account</string>
    <string name="email">E-mail</string>
    <string name="pasword">Password</string>
    <string name="insertEmail">Insira seu Email</string>
    <string name="name">Name</string>
    <string name="search">Search games</string>
    <string name="adicionar_game">Adicionar Game</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="created">Created at</string>
    <string name="description">Description</string>
    <string name="save_game">SAVE GAME</string>
    <string name="lore_ipsum">"On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains."

</string>
</resources>