<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/round"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Theme.Desafio04.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/name"
        android:labelFor="@+id/editTextTextEmailAddress"
        app:placeholderText="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextName"
            style="@style/Theme.Desafio04.TextInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Theme.Desafio04.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/email"
        android:labelFor="@+id/editTextTextName"
        app:placeholderText="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextEmailAddress"
            style="@style/Theme.Desafio04.TextInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Theme.Desafio04.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/pasword"
        android:labelFor="@+id/editTextTextEmailAddress"
        app:placeholderText="@string/pasword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextPassword"
            style="@style/Theme.Desafio04.TextInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white_200"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateAccount"
        style="@style/Theme.Desafio04.MaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/new_account" />

</LinearLayout>